WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30637
Fix a compiler warning in windows.
https://bugs.webkit.org/show_bug.cgi?id=30637
Summary
Fix a compiler warning in windows.
Jeremy Orlow
Reported
2009-10-21 11:10:33 PDT
Fix a compiler warning in windows.
Attachments
patch
(963 bytes, patch)
2009-10-21 11:13 PDT
,
Jeremy Orlow
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Orlow
Comment 1
2009-10-21 11:13:34 PDT
Created
attachment 41583
[details]
patch
Eric Seidel (no email)
Comment 2
2009-10-21 12:01:35 PDT
I thought we already tried to fix all these. I'm surprised we're still haunted by this nonsense.
Eric Seidel (no email)
Comment 3
2009-10-21 12:02:13 PDT
Comment on
attachment 41583
[details]
patch LGTM, assuming you searched for any other examples of this and this was the only one.
Jeremy Orlow
Comment 4
2009-10-21 12:07:05 PDT
On Windows while compiling Chromium, yes it's the only one.
Alexey Proskuryakov
Comment 5
2009-10-21 13:59:24 PDT
(In reply to
comment #2
)
> I thought we already tried to fix all these.
We're still waiting for Google to land
bug 28003
.
Jeremy Orlow
Comment 6
2009-10-21 14:05:09 PDT
Oh. I wasn't aware of the other bug. Well, I already landed so I guess when the other one lands it should undo what I just did.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug