https://bugs.webkit.org/show_bug.cgi?id=30637 Fix a compiler warning in windows.

Patch by Jeremy Orlow <jorlow@chromium.org> on 2009-10-21
Reviewed by Eric Seidel.

* loader/ResourceLoadNotifier.h:



git-svn-id: svn://svn.chromium.org/blink/trunk@49916 bbb929c8-8fbe-4397-9dbb-9b2b20218538