third_party/WebKit/WebCore/loader/ResourceLoadNotifier.h
@@ -41,8 +41,8 @@ class Frame;
 class ResourceError;
 class ResourceLoader;
 class ResourceResponse;
-class ResourceRequest;
 class ScriptString;
+struct ResourceRequest;
 
 class ResourceLoadNotifier : public Noncopyable {
 public:
